Fix login form size on small devices

--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -16,6 +16,11 @@
   width: 45rem;
   text-align: center;
   color: white;
+  @media (max-width: $desktop-breakpoint) {
+    margin-top: $l-size;
+    padding-left: $s-size;
+    width: 35rem;
+  }
 }
 
 .box-layout__title {
